--- a/src/features/home/App.less
+++ b/src/features/home/App.less
@@ -42,6 +42,11 @@
     background-color: #fff;
     height: 44px;
   }
+
+  // Overflow issue
+  .right-split-pane {
+    overflow: visible!important;
+  }
 }
 .home-app_no-plugin-alert .ant-modal-content {
   width: 600px;
