--- a/src/features/home/ElementPage.less
+++ b/src/features/home/ElementPage.less
@@ -4,7 +4,8 @@
   width: 100%;
   height: 100%;
   background-color: #1e1e1e;
-  overflow: auto;
+  overflow: visible;
+
   .scroll-style();
 
   &.error {
